# developer-hub

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  .prettierignore  .textlintrc  .textlintrc.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  automations.sh  check-llms.sh  docusaurus.config.ts  lychee.toml  mcp-server copy.mjs  mcp-server.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-automations.sh  sidebars.ts  test-mcp.sh  tsconfig.json  update-deps.sh  webpack.config.js
.claude/: settings.local.json
.cursor/: mcp.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: api_key_request.yml  config.yml  development.yml  development_issue.yml  documentation.yml  feature.yml  feature_request.yml  feed_request.yml  request_feed.yml  url_request.yml  web2json_api_key_request.yml
.github/config/: ignored-words.txt  lychee.toml  typos.toml
.github/workflows/: auto-changelog.yml  automatic-feed-request.yml  branch-cleanup.yml  check-broken-links.yml  check-external-links.yml  check-pr-title.yml  codeql.yml  deploy.yml  external-links.yml  lint-check-internal-links.yml  lint-check-links.yml  lint-sentence-newline.yml  spell-check.yml  test-go-examples.yml  test-javascript-examples.yml  test-python-examples.yml  test-rust-examples.yml  typo-check.yml  validate-pr-title.yml
automatic_feeds/: check_new_feed.py  pyproject.toml
automations/: .gitignore  _anchor_feeds.md  _block_latency_feeds.md  anchor_feeds.json  anchor_feeds.md  anchor_risk.json  block_latency_feeds.json  block_latency_feeds.md  block_latency_risk.json  check_new_feed.py  contract_data.json  custom_feeds.json  docs_to_bigquery.py  feed_stability.json  feed_table_generator.py  ftso_feeds.json  ftso_risk.json  onchain_anchor_feeds.json  onchain_block_latency_feeds.json  onchain_feedtable_generator.py  pyproject.toml  reference_table_generator.py  solidity_reference.json  solidity_reference_table_generator.py
blog/: become-a-data-provider.mdx  deploy-first-contract.mdx  how-flare-governance-works.mdx  learn-how-to-use-the-ftso.mdx  participate-in-flare-governance.mdx  what-is-a-flare-validator.mdx
cloudflare-mcp/: README.md  wrangler.toml
cloudflare-mcp/src/: index.js
code_examples/developer-hub-go/: .gitignore  IFastUpdater.go  README.md  chain_id.go  create_account.go  deploy_contract.go  ftsov2_consumer_coston.go  ftsov2_consumer_coston2.go  go.mod  go.sum  main.go  make_query.go
code_examples/developer-hub-javascript/: .gitignore  chain_id_coston2.js  create_account.js  deploy_contract_coston2.js  deploy_contract_flare.js  eslint.config.js  fetch_abi_coston2.js  fetch_abi_flare.js  ftsov2_config_coston2_ethers.js  ftsov2_config_coston2_web3.js  ftsov2_consumer_coston2_ethers.js  ftsov2_consumer_coston2_web3.js  ftsov2_consumer_coston_ethers.js  ftsov2_consumer_coston_web3.js  make_query_coston2.js  make_query_flare.js  package-lock.json  package.json  (+2 more)
code_examples/developer-hub-python/: .gitignore  chain_id_coston2.py  chain_id_flare.py  compile_contract.py  deploy_contract_coston2.py  deploy_contract_flare.py  fetch_abi_coston2.py  fetch_abi_flare.py  ftsov2_config_coston2.py  ftsov2_consumer_coston.py  ftsov2_consumer_coston2.py  make_query_coston2.py  make_query_flare.py  pyproject.toml  test_queries.py  vol_incentive_sample_size_increase.py  volatility_incentive_coston2.py
code_examples/developer-hub-rust/: .gitignore  Cargo.toml  FtsoV2FeedConsumer.json  FtsoV2FeedConsumer.sol  README.md
docgen/: generate-solidity-docs.sh  hardhat.config.ts.patch  repos.list
docgen/templates/: enum.hbs  (+5 more)
docs/: 1-intro.mdx  2-network.mdx  2-run-node.mdx  3-terminology.mdx  authors.yml  tags.yml
examples/: README.md
examples/developer-hub-python/: README.md  block_number_coston.py  block_number_coston2.py  block_number_flare.py  block_number_songbird.py  chain_id_coston2.py  chain_id_flare.py  compile_contract.py  create_account.py  deploy_contract_coston2.py  deploy_contract_flare.py  fetch_abi_coston2.py  fetch_abi_flare.py  fetch_anchor_feeds.py  fetch_and_verify_anchor_onchain.py  ftsov2_config_coston2.py  ftsov2_consumer_coston2.py  get_feed_id.py  make_query_coston2.py  make_query_flare.py  pyproject.toml  secure_random_coston2.py  test_queries.py  utils.py  volatility_incentive_coston2.py
examples/developer-hub-rust/: .gitignore  Cargo.toml  FlareContractRegistry.json  FtsoV2AnchorFeedConsumer.json  FtsoV2FeedConsumer.json  README.md  RandomNumberV2.json  config.json  test.sh
guides/: 2024-05-21-deploy-first-contract.mdx  2024-05-22-deploy-first-contract.mdx  2024-05-22-hardhat-foundry-starter-kit.mdx  2024-05-23-flare-dpos-mechanism.mdx  2024-05-23-what-is-dpos.mdx  2024-05-24-flare-for-go-developers.mdx  2024-05-24-flare-for-javascript-developers.mdx  2024-05-25-flare-for-javascript-developers.mdx  2024-05-25-flare-for-python-developers.mdx  2024-05-25-flare-for-rust-developers.mdx  2024-05-26-flare-for-go-developers.mdx  2024-05-26-flare-for-python-developers.mdx  2024-05-26-flare-for-rust-developers.mdx  2024-05-27-flare-for-go-developers.mdx  2024-05-27-flare-for-python-developers.mdx  2024-05-28-hardhat-foundry-starter-kit.mdx  2024-06-03-deploy-first-contract.mdx  2024-06-11-how-to-state-connector.mdx  2024-06-12-attestation-types.mdx  2024-06-13-evm-attestation.mdx  2024-06-13-evm-connectivity.mdx  authors.yml  become-a-data-provider.mdx  deploy-first-contract.mdx  flare-for-go-developers.mdx  flare-for-javascript-developers.mdx  flare-for-python-developers.mdx  flare-for-rust-developers.mdx  participate-in-flare-governance.mdx  run-a-flare-validator.mdx  tags.yml  what-is-a-flare-data-provider.mdx  what-is-a-flare-validator.mdx  what-is-dpos.mdx  what-is-enshrining.mdx
handlebar_templates/: common.hbs  contract.hbs  enum.hbs  event.hbs  function.hbs
queryscript/: README.md  app.py  requirements.txt
scripts/: fix-llms-urls.js  fix-llms-urls.mjs  generate-md-routes.mjs  html-to-markdown.mjs  inject-html-llms-tags.mjs  mark-html-parity-exclusions.mjs  mdx-markdown-expanders.mjs
static/: robots.txt
(+1082 files in other folders)
