[tool.poetry]
name = "automatic-feeds"
version = "0.1.0"
description = ""
authors = ["Dinesh Pinto <annual.fallout_0z@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pycoingecko = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
