[tool.poetry]
name = "automations"
version = "0.1.0"
description = ""
authors = ["Dinesh Pinto <annual.fallout_0z@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pycoingecko = "^3.1.0"
web3 = "^6.20.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "D", "ISC001", "COM812", "T201", "N806", "E501"]
