[project]
name = "automations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycoingecko>=3.1.0",
    "web3>=7.2.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.383",
    "ruff>=0.6.4",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "D", "ISC001", "COM812", "T201", "E501"]
