[tool.poetry]
name = "developer-hub-python"
version = "0.1.0"
description = ""
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^6.19.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
