[package]
name = "developer-hub-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = ["contract", "providers", "transport-http", "network", "signers", "signer-wallet"] }
eyre = "0.6.12"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
