[project]
name = "developer-hub-python"
version = "0.1.0"
description = "Python examples for Flare Developer Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-solc-x>=2.0.3",
    "web3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ISC001", "COM812", "T201"]

[tool.ruff.lint.extend-per-file-ignores]
"test_queries.py" = ["S101", "N806"]

[tool.ruff.format]
docstring-code-format = true
