[package]
name = "developer-hub-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2", features = ["full"] }
eyre = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
